--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/Setting.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/Setting.cshtml
@@ -61,7 +61,18 @@
         #CartonTable_wrapper, #CartonTable_wrapper > .dataTables_scrollHeadInner {
             width: 100%
         }
+        #ShipmodeSeqTable_info {
+            color: white
+        }
 
+        #ShipmodeSeqTable_previous, #ShipmodeSeqTable_next {
+            color: white !important;
+        }
+
+        #ShipmodeSeqTable_wrapper, #ShipmodeSeqTable_wrapper > .dataTables_scrollHeadInner {
+            width: 100%
+        }
+        
         table.dataTable.cell-border table tbody tr td:not(:first-child) {
             text-align: center;
         }
@@ -71,7 +82,7 @@
 <div class="whiteBackgrond" style="display:flex;flex-wrap:nowrap;height:85vh;align-items:center; vertical-align:middle">
     @using (Html.BeginForm("GoGeneral", "Inspection", FormMethod.Post, new { @id = "settingForm", onsubmit = "return checkSubmitValue();" }))
     {
-        @Html.HiddenFor(o=>o.FinalInspectionID)
+        @Html.HiddenFor(o => o.FinalInspectionID)
         <div style="padding:2em 3em 2em 3em">
             <div class="col-auto"><h1 style="font-size:2em">Inspection Setting</h1></div>
 
@@ -143,7 +154,7 @@
         <!--Detail-Cartons彈出視窗-->
         <!--多個Table forA001-->
         <input type="hidden" id="currnetSelectedPO" />
-        <div class="detail-dialog to-edit-detail" title="Detail">
+        <div class="detail-dialog to-edit-detail" title="Cartons">
             <div class="detail-dialog-content dialog-content-w-icon" style="height:40vh">
                 <table cellspacing="100" id="CartonTable" class="table table-striped display">
                     <thead>
@@ -161,7 +172,7 @@
                                 <td>
                                     @{ string Ischecked = Model.SelectCarton[i].Selected ? "checked" : ""; }
                                     @*@Html.CheckBox($"Carton_Select_[{i}]", Model.SelectCarton[i].Selected, new { @class = "messageCheckbox", @Idx = i, @CTNNo = Model.SelectCarton[i].CTNNo, @PackingListID = Model.SelectCarton[i].PackingListID, @OrderID = Model.SelectCarton[i].OrderID, @onclick = "SelectCartonChange(this)" })*@
-                                    <input type="checkbox" ID="Carton_Select_[@i]" class = "messageCheckbox" Idx = @i CTNNo = @Model.SelectCarton[i].CTNNo PackingListID = @Model.SelectCarton[i].PackingListID OrderID = @Model.SelectCarton[i].OrderID onclick = "SelectCartonChange(this)" />
+                                    <input type="checkbox" ID="Carton_Select_[@i]" class="messageCheckbox" Idx=@i CTNNo=@Model.SelectCarton[i].CTNNo PackingListID=@Model.SelectCarton[i].PackingListID OrderID=@Model.SelectCarton[i].OrderID onclick="SelectCartonChange(this)" />
                                 </td>
                                 <td>
                                     @Html.DisplayFor(o => Model.SelectCarton[i].PackingListID)
@@ -181,6 +192,49 @@
                 </div>
             </div>
         </div>
+
+
+        <!--Shipmode Seq彈出視窗-->
+        <input type="hidden" id="currnetSelectedShipmodeSeq" />
+        <div class="detail-dialog to-ShipmodeSeq-detail" title="Detail">
+            <div class="detail-dialog-content dialog-content-w-icon" style="height:40vh">
+                <table cellspacing="100" id="ShipmodeSeqTable" class="table table-striped display">
+                    <thead>
+                        <tr class="row-name">
+                            <th>Select</th>
+                            <th>Packing List ID</th>
+                            <th>CTN No</th>
+                            <th>SP</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @for (int i = 0; i < Model.SelectCarton.Count; i++)
+                        {
+                            <tr class="row-content" style="vertical-align: middle; text-align: center;">
+                                <td>
+                                    @{ string Ischecked = Model.SelectCarton[i].Selected ? "checked" : ""; }
+                                    @*@Html.CheckBox($"Carton_Select_[{i}]", Model.SelectCarton[i].Selected, new { @class = "messageCheckbox", @Idx = i, @CTNNo = Model.SelectCarton[i].CTNNo, @PackingListID = Model.SelectCarton[i].PackingListID, @OrderID = Model.SelectCarton[i].OrderID, @onclick = "SelectCartonChange(this)" })*@
+                                    <input type="checkbox" ID="Carton_Select_[@i]" class="messageCheckbox" Idx=@i CTNNo=@Model.SelectCarton[i].CTNNo PackingListID=@Model.SelectCarton[i].PackingListID OrderID=@Model.SelectCarton[i].OrderID onclick="SelectCartonChange(this)" />
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(o => Model.SelectCarton[i].PackingListID)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(o => Model.SelectCarton[i].CTNNo)
+                                </td>
+                                <td>
+                                    @Model.SelectCarton[i].OrderID-
+                                </td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+                <br />
+                <div>
+                </div>
+            </div>
+        </div>
+
         <button class="button" style="right:0">Next</button>
 
         //Model.SelectCarton的標籤藏在這邊
@@ -281,6 +335,12 @@
                     Order_AvailableQty[orderID] = $(this).find("input").val();
                     Cacu_AvailableQty();
                 }
+                if (Column == "ShipmodeSeq") {
+
+                    table.row($("#SelectPO_" + orderID).closest('tr')).data()[9] = $(this).find("input").val();
+                    Order_AvailableQty[orderID] = $(this).find("input").val();
+                    Cacu_AvailableQty();
+                }
             });
 
             $("#CartonTable").DataTable({
@@ -298,6 +358,24 @@
                     { targets: 1, width: "30%" },
                     { targets: 2, width: "30%" },
                     { targets: 3, visible:false },
+                ]
+            });
+
+            $("#ShipmodeSeqTable").DataTable({
+                "pageLength": 10,
+                "autoWidth": false,
+                "info": false,
+                destroy: true, // 設定這個才能重新初始化Datatables
+                "filter": false,
+                "paging": false,
+                "info": false,
+                "scrollY": "40vh",
+                "scrollCollapse": true,
+                columnDefs: [
+                    { targets: 0, width: "30%" },
+                    { targets: 1, width: "30%" },
+                    { targets: 2, width: "30%" },
+                    { targets: 3, visible: false },
                 ]
             });
 
@@ -326,6 +404,35 @@
             });
 
             $(".to-edit-detail").dialog({
+                width: "70%",
+                dialogClass: "add-contact-box",
+                buttons: {
+                    "1": {
+                        text: 'Next',
+                        click: function () {
+
+                            var checkedList = [];
+
+                            $('[id^=Carton_Select_]').each(function () {
+
+                                if ($(this).prop('checked')) {
+                                    //checkedList.push($(this).val());
+                                    checkedList.push($(this).attr("ctnno"));
+                                }
+                            });
+
+                            var index = $("#currnetSelectedPO").val();
+                            document.getElementById("SelectedPO[" + index + "].Cartons").value = checkedList.join(',');
+                            $(this).dialog("close");
+                        }
+                        , "class": "button"
+                        , "style": "bottom:0;background-color:#E00000"
+                    },
+                },
+            });
+
+
+            $(".to-ShipmodeSeq-detail").dialog({
                 width: "70%",
                 dialogClass: "add-contact-box",
                 buttons: {
@@ -497,16 +604,80 @@
             NonLoading();
         }
 
+
+        function open_ShipmodeSeq(pkey) {
+            var findValue = pkey.split(',');
+            var rowIndex;
+            var sp = findValue[0];
+            $(".to-ShipmodeSeq-detail").dialog("open");
+            ShowLoading();
+            $("#ShipmodeSeqTable").DataTable({
+                "pageLength": 10,
+                "autoWidth": false,
+                "info": false,
+                destroy: true, // 設定這個才能重新初始化Datatables
+                //"filter": false,
+                "paging": false,
+                "info": false,
+                "scrollY": "40vh",
+                "scrollCollapse": true,
+                "search": {
+                    "search": sp + '-'
+                },
+                columnDefs: [
+                    { targets: 0, width: "30%" },
+                    { targets: 1, width: "30%" },
+                    { targets: 2, width: "30%" },
+                    { targets: 3, visible: false },
+                ]
+            })/*.columns.adjust()*/;
+
+            $("#ShipmodeSeqTable_filter").hide();
+
+            $('[id^=Carton_Select_]').each(function () {
+                $(this).prop('checked', false);
+            });
+
+            $(adata).each(function (index, element) {
+                var orderID = element[1];
+                var poID = element[3];
+                if (orderID == findValue[0] && poID == findValue[1]) {
+                    rowIndex = element[2];
+
+                }
+            });
+
+            var cartonValues = document.getElementById("SelectedPO[" + rowIndex + "].Cartons").value;
+            var cartonList = cartonValues.split(',');
+
+            if (cartonValues != '') {
+
+                $(cartonList).each(function () {
+
+                    //$('#carton_select_' + this).prop('checked', true);
+                    $('input[Type=checkbox][CTNNo=' + this + ']').prop('checked', true);
+                });
+            }
+            $("#currnetSelectedPO").val(rowIndex);
+
+            NonLoading();
+        }
         function format(d, orderID) {
             return '<table cellpadding="5" cellspacing="0" border="0" style="padding-left:50px;">' +
                 '<tr><td style="width:90%">PO#:</td><td style="width:10%">' +
                 '<input type="hidden" name="SelectedPO[' + d[2] + '].ORDERID" id="SelectedPO[' + d[2] + '].ORDERID" value="' + d[1] + '" \/>' +
                 '<input type="hidden" name="SelectedPO[' + d[2] + '].POID" id="SelectedPO[' + d[2] + '].POID" value="' + d[3] + '" \/>' +
-                d[3]+
+                d[3] +
                 '</td></tr>' +
                 '<tr><td>Style#:</td><td>' + d[4] + '</td></tr>' +
                 '<tr><td>Season:</td><td>' + d[5] + '</td></tr>' +
                 '<tr><td>Brand:</td><td>' + d[6] + '</td></tr>' +
+
+                '<tr><td>Shipmode Seq:</td><td class="OpenDetail" >' +
+                '<input type="text" style="width:60px" readonly="readonly" onclick="open_ShipmodeSeq(\'' + d[1] + ',' + d[3] + '\');" name="SelectedPO[' + d[2] + '].ShipmodeSeq" id="SelectedPO[' + d[2] + '].ShipmodeSeq" value="' + d[8] + '" OrderID="' + orderID + '" Col="ShipmodeSeq"/>' +
+                '</td></tr>' +
+
+                '<tr><td>Article:</td><td>' + 'd[9]' + '</td></tr>' +
                 '<tr><td>SP# Qty:</td><td>' + d[7] + '</td></tr>' +
                 '<tr><td>Cartons:</td><td class="OpenDetail" >' +
                 '<input type="text" style="width:60px" readonly="readonly" onclick="open_cartonsDetail(\'' + d[1] + ',' + d[3] + '\');" name="SelectedPO[' + d[2] + '].Cartons" id="SelectedPO[' + d[2] + '].Cartons" value="' + d[8] + '" OrderID="' + orderID +'" Col="Cartons"/>' +
