--- a/Quality/Quality/Areas/BulkFGT/Views/FabricOvenTest/Detail.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/FabricOvenTest/Detail.cshtml
@@ -206,9 +206,10 @@
                                             Picture
                                         </h4>
                                     </td>
-
+                                    <td style="width:16%";>
+                                    </td>
                                     <td align="right">
-                                        <h4 id="New" style=" margin-right: 10em;">
+                                        <h4 id="New">
                                             <img src="~/Image/Icon/New.png" width="30" />
                                             New Item
                                         </h4>
